Just code style and optimizing